--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,5 @@
 ---
+
 ---
 <!DOCTYPE html>
 <html>
@@ -9,53 +10,45 @@
 </head>
 <body>
 
+  
 {{ content }}
 
 <div class="flex-container">
   <div class="left">
   <!-- Slideshow -->
+
     <div class="slideshowContainer">
-      <div class="slideshowPic fade">
-        <div class="picNumber">1 / 4</div>
-        <img src="{{ site.baseurl }}/img/Jinan.jpg" class="oneImage" alt="Jinan" style="max-width:300px;height:400px;">
-        <div class="captionText">Me in Jinan</div>
-      </div>
-
-      <div class="slideshowPic fade">
-        <div class="picNumber">1 / 4</div>
-        <img src="{{ site.baseurl }}/img/beijing.jpg" class="oneImage" alt="Jinan" style="max-width:300px;height:400px;">
-        <div class="captionText">Me in Beijing</div>
-      </div>
-
-      <div class="slideshowPic fade">
-        <div class="picNumber">1 / 4</div>
-        <img src="{{ site.baseurl }}/img/shanghai.jpg" class="oneImage" alt="Jinan" style="max-width:300px;height:400px;">
-        <div class="captionText">Me in Jinan</div>
-      </div>
+      <ul>
+      {% for image in site.images %}
+        <div class="slideshowPic fade">
+          <div class="picNumber">{{ image.number }}</div>
+          <img src="{{ image.image_path }}" class="oneImage" alt="Jinan" style="max-width:400px;max-height:500px;">
+          <div class="captionText">Me in Jinan</div>
+        </div>
+      {% endfor %}
+      </ul>
+  
       <a class="previous" onclick="plusSlides(-1)">&#10094;</a>
       <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
 
   
-
-    <div class="dots" style="text-align:center">
+    
+    <div class="dots">
+      {% for image in site.images %}
       <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
+      {% endfor %}
     </div>
   </div>
 
   <div class="right">
     <div class="oneRow">
-      <div class="columnPic cursor">
-        <img class="sidePic" onclick="currentSlide(1)" src="{{ site.baseurl }}/img/Jinan.jpg" style="height:200px" alt="Jinin">
-      </div>
-      <div class="columnPic cursor">
-        <img class="sidePic" onclick="currentSlide(2)" src="{{ site.baseurl }}/img/beijing.jpg" style="height:200px" alt="Jinin">
-      </div>
-      <div class="columnPic cursor">
-        <img class="sidePic" onclick="currentSlide(3)" src="{{ site.baseurl }}/img/shanghai.jpg" style="height:200px" alt="Jinin">
-      </div>
+        {% for image in site.images %}
+        <div class="columnPic cursor">
+          <img class="sidePic" onclick="currentSlide(1)" src="{{ image.image_path }}" style="height:200px" alt="Jinin">
+         </div>
+        {% endfor %}
+      
   </div>
   </div>
 </div>
