first blog post over

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,6 +22,9 @@
         <!-- end of Nav bar with social medias -->
     
   <h1 class="postTitle">{{ page.blog_title }}</h1>
+  <div>
+      <img class="bigPostImage" src="{{ page.image }}" alt="Picture">
+    </div>
 </div>  
 
 <div class="postText">
