--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -23,6 +23,11 @@ hr {
   padding: 20px;
   text-align: justify;
 }
+.bigPostImage{
+  margin: 0px;
+  width: 100%;
+  height: auto;
+}
 
 .flex-container{
   display: flex;
@@ -33,7 +38,9 @@ hr {
 }
 
 .left{
-  flex: 60%;
+  flex: 59%;
+  border-right: 2px solid #565e6c;
+  background-image: url(/img/OrangePolka.png)
 }
 
 .right{
@@ -67,7 +74,7 @@ hr {
   position: absolute;
   top: 40%;
   width: auto;
-  color: grey;
+  color: #565e6c;
   font-size: 35px;
   transition: 0.5s ease;
   z-index: 1;
@@ -117,7 +124,7 @@ hr {
   width:20px;
   height: 20px;
   border-radius: 50%;
-  background-color:black;
+  background-color: #565e6c;
   opacity: 0.4;
   display: inline-block;
   transition: background-color 0.5s ease;
