--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -206,13 +206,10 @@
       <h4 class="grey">Follow me</h4>
   </div>
   <div class="whiteBox">
-      <a href="#" class="followMeButt"><i class="fa fa-facebook-official"></i></a>
-      <a href="#" class="followMeButt"><i class="fa fa-instagram"></i></a>
-      <a href="#" class="followMeButt"><i class="fa fa-snapchat-square"></i></a>
-      <a href="#" class="followMeButt"><i class="fa fa-flickr"></i></a>
-      <a href="#" class="followMeButt"><i class="fa fa-twitter-square"></i></a>
-      <a href="#" class="followMeButt"><i class="fa fa-linkedin-square"></i></a>
-      <a href="#" class="followMeButt"><i class="fa fa-search"></i></a>       
+        <a href="#" class="socMedTwo" >{% include icons/facebook.html %}</a>
+        <a href="#" class="socMedTwo" >{% include icons/insta.html %}</a>
+        <a href="#" class="socMedTwo" >{% include icons/twitter.html %}</a>
+        <a href="#" class="socMedTwo" >{% include icons/linkedin.html %}</a> 
   </div>
 </div>              
 <!--End of Follow me  -->
