--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -1,6 +1,14 @@
 
 body {font-family: Verdana, sans-serif; margin:0}
 
+.grey{
+  background:#565e6c;
+  padding: 10px;
+  display:block;
+  text-align: center;
+  margin-top: 10px;
+}
+
 hr { 
   display: block;
   margin-top: 0.5em;
