--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,14 +18,14 @@
          <div class="mainrow">
          <header>
              <h1 class="main">Marta Gut</h1>
-             <h5 class="underMain">Let's travel together</h5>
+             <h5 class="underMain">Depressed Traveller</h5>
          </header>
          <!-- Big Image Header -->
          <div>
          <div class="imgContainer">
              <img class="image" src="img\imageHeader.jpg"  alt="imageHeader"/>
              <div class="imgText">
-                   <h1 class="title"><span>My travelling experience</span></h1>
+                   <h1 class="title"><span>Why I Should Have Stayed At Home</span></h1>
                    <button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button>
              </div>
          </div>
