--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,8 +31,9 @@
 {{ content }}
 </div>
 
-<hr>
-
+<div class="grey">
+  <h1>Gallery</h1>
+</div>
 <div class="flex-container">
   <div class="left">
 
@@ -42,7 +43,7 @@
       {% for image in page.images %}
         <div class="slideshowPic fade">
           <div class="picNumber">{{ image.image_number }}</div>
-          <img src="{{image.image_path}}" class="oneImage" alt="{{image_name}}" style="max-width:400px;max-height:500px;">
+          <img src="{{image.image_path}}" class="oneImage" alt="{{image_name}}" style="max-width:600px;max-height:550px;">
           <div class="captionDiv"><p class="captionText">{{image.text}}</p></div>
         </div>
       {% endfor %}
@@ -74,7 +75,9 @@
   </div>
   </div>
 </div>
-<hr>
+<div class="grey">
+  <h2>Comments</h2>
+</div>
 
 <script>
   // slide index is the position of the picture in the array of pictures
