--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,6 @@
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"18a1deab68d88323607912764","lid":"dbaea1689b"}) })</script>
 <style src="js/post.js"></style>
-<div>
-    <div>
+<div style="overflow: auto;">
     <!-- Nav bar with social medias -->
     <div class="navBar"> 
         <a href="#" class="socMed" >{% include icons/facebook.html %}</a>
@@ -10,27 +9,24 @@
         <a href="#" class="socMed" >{% include icons/linkedin.html %}</a>
         <a href="#" class="searchRight socMed"><i>{% include icons/search.html %}</i></a>       
     </div>
-	</div>
     <!-- end of Nav bar with social medias -->
 
     <!-- Content div -->
      <div> 
-         <div class="mainrow">
-         <header>
+        <div class="mainrow">
+         <div>
              <h1 class="main">Marta Gut</h1>
              <h5 class="underMain">Depressed Traveller</h5>
-         </header>
+         </div>
          <!-- Big Image Header -->
-         <div>
          <div class="imgContainer">
              <img class="image" src="img\imageHeader.jpg"  alt="imageHeader"/>
              <div class="imgText">
-                   <h1 class="title"><span>Why I Should Have Stayed At Home</span></h1>
+                   <h1 class="title"><span>Why I Should Have <br> Stayed At Home</span></h1>
                    <button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button>
              </div>
          </div>
-         </div>
-         </div>
+        </div>
           <!--End of Big Image Header -->
 	 </div>
 	 
