--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,8 +1,46 @@
 ---
 layout: page
 ---
+<head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
+</head>
+
+<body>
+<div class="postHeading">
+    <div>
+        <!-- Nav bar with social medias -->
+        <div class="navBar"> 
+            <a href="#" class="socMed" >{% include icons/facebook.html %}</a>
+            <a href="#" class="socMed" >{% include icons/insta.html %}</a>
+            <a href="#" class="socMed" >{% include icons/twitter.html %}</a>
+            <a href="#" class="socMed" >{% include icons/linkedin.html %}</a>       
+        </div>
+      </div>
+        <!-- end of Nav bar with social medias -->
+    
+        <div>
+            <h1>Why you shouldn't go to {{ page.category }}</h1>
+        </div>
+</div>
+
+
+<div class="flex-container table">
 {% for post in site.categories[page.category] %}
-<a href="{{post.url | absolute_url}}">
-    {{ post.title }}
-</a>
+<div class="category-box">
+        <div class="whiteBox smallBlog">
+                <a  href="{{ post.url }}">
+                    <img class="categ-img" src="{{ post.image }}" alt="beijing">
+                    <div class="smallBlogText">{{ post.blog_title }}
+                    <span class="postDate">{{ post.url | date: "%b %-d, %Y" }} </span></div>
+                </a>
+                <div>
+                     <div class="blogContainer"> 
+                         {{ post.excerpt }}
+                    </div>
+                </div>    
+        </div>
+</div>
 {% endfor %}
+</div>
+</body>
