--- a/_sass/_middle.scss
+++ b/_sass/_middle.scss
@@ -1,10 +1,12 @@
+
 .flex-container {
     display: flex; 
     flex-wrap: wrap;
     flex-direction: row;
-    height: 100%;
+    height: auto;;
     width: 100%;
     margin: 0px;
+    clear: both;
 }
 .bigger {
     flex: 1 1 56%;
