The new title is completely wrong, getting back the old one

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <!-- Footer -->
 <div>
 <footer> 
-    <div class="plane" onclick="toTop" id="toTop">  
+    <div class="plane" onclick="toTop()" id="toTop">  
     <a href="#">{% include icons/plane.html %}</a>
     </div>
     <div class="greyFoot flex-container">
