--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -4,6 +4,7 @@ layout: page
 <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -44,5 +45,8 @@ layout: page
 {% endfor %}
 </div>
 
+<div>
 {% include footer.html %}
+</div>
+<script href="{{site.baseurl}}/js/footer.js"></script>
 </body>
