--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
          </div>
          <!-- Big Image Header -->
          <div class="imgContainer">
-             <img class="image" src="img\imageHeader.jpg"  alt="imageHeader"/>
+             <div class="image"><img src="img\imageHeader.jpg"  alt="imageHeader"/></div>
              <div class="imgText">
                    <h1 class="title"><span>Why I Should Have Stayed At Home</span></h1>
                    <button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button>
