--- a/_includes/icons/linkedin.html
+++ b/_includes/icons/linkedin.html
@@ -1,4 +1,4 @@
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 512 512">
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="2vw" height="2vw" viewBox="0 0 512 512">
     <title></title>
     <g id="icomoon-ignore">
     </g>
