apparently launching on github

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -39,7 +39,7 @@ const hitTemplate = function(hit) {
 search.addWidget(
   instantsearch.widgets.searchBox({
     container: '#search-searchbar',
-    placeholder: 'Search into posts...',
+    placeholder: 'The reason you should stay at home...',
     poweredBy: true
   })
 );
