--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,10 +20,10 @@
          </div>
          <!-- Big Image Header -->
          <div class="imgContainer">
-             <div class="image"><img src="img\imageHeader.jpg"  alt="imageHeader"/></div>
+             <img class="image" src="img\imageHeader2.jpg"  alt="imageHeader"/>
              <div class="imgText">
                    <h1 class="title"><span>Why I Should Have Stayed At Home</span></h1>
-                   <button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button>
+                   <span><button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button></span>
              </div>
          </div>
         </div>
