--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -4,6 +4,7 @@
     margin-top: 10px;
     position: relative;
     margin: auto;
+    padding-bottom: 2%;
   }
   footer{
       bottom: 0px;
@@ -25,7 +26,6 @@
   .flex-container{
     display: flex;
     flex-direction: row;
-    flex-wrap:wrap;
     justify-content: space-between; 
   }
 
@@ -33,7 +33,7 @@
     cursor: pointer;
     width: auto;
     color: white;
-    font-size: 35px;
+    font-size: 4vw;
     transition: 0.5s ease;
     z-index: 1;
     margin: 10px;
@@ -52,7 +52,7 @@
   
   .previousWise:hover, .nextWise:hover{
     background-color: rgba(0, 0, 0, 0.4);
-    font-size: 40px;
+    font-size: 5vw;
   }
 
   .motivation{
@@ -82,19 +82,25 @@
   }
 
   @media (max-width: 700px) {
-    .previousWise, .nextWise, .motivation {
-      font-size: 11px;
-    }
-    .motivation{
-      height: 50px;
-    }
+   .flex-container{
+     flex-direction: column;
+   }
+   .previousWise, .nextWise{
+    margin: auto;
+    padding: 20px;
+  }
   }
  @media (max-width: 400px) {
-  .previousWise, .nextWise, .motivation {
-          font-size: 11px;
+        .flex-container{
+          flex-direction: column;
         }
         .motivation{
-          height: 50px;
+          margin: auto;
+          padding-top: 0px;
+          order: 2;
+          height: 150px;
+          width: 90%;
+          color: white;
         }
       }
   
