--- a/_sass/_post.scss
+++ b/_sass/_post.scss
@@ -3,32 +3,21 @@ body {font-family: Verdana, sans-serif; margin:0}
 
 .grey{
   background:#565e6c;
-  padding: 10px;
+  padding: 1%;
   display:block;
   text-align: center;
-  margin-top: 10px;
-}
-
-hr { 
-  display: block;
-  margin-top: 0.5em;
-  margin-bottom: 0.5em;
-  margin-left: 10px;
-  margin-right: 10px;
-  border-style: inset;
-  border-width: 2px;
-  color: #565e6c;
-  
+  margin-top: 5px;
+  margin-bottom: 1%;
 }
 
 .postHeading{
     background: white; 
     text-align: center;
     color: #565e6c;
-    font-size: 25px;
+    font-size: 2vw;
 }
 .postText{
-  padding: 20px;
+  padding: 2%;
   text-align: justify;
 }
 .bigPostImage{
@@ -46,14 +35,12 @@ hr {
 }
 
 .left{
-  flex: 59%;
-  border-right: 2px solid #565e6c;
-  background-image: url(/img/OrangePolka.png);
+  flex: 73%;
   position: relative;
 }
 
 .right{
-   flex: 40%;
+   flex: 25%;
    overflow-y: auto;
    max-height: 600px;
 }
@@ -72,6 +59,7 @@ hr {
     width: auto;
     margin-top: auto;
     margin-bottom: auto;
+    
 }
 .oneImage{
   height: 100%;
@@ -86,15 +74,6 @@ hr {
   max-height: 550px;
 }
 
-@media 
-  (max-width: 800px) 
-  and (orientation: portrait)
-  and (-webkit-min-device-pixel-ratio: 2) { 
-.oneImage{
-  max-width: 400px;
-  max-height: 350px;
-}
-}
 .oneImage:hover{
   box-shadow: 0 0 8px 3px  #f6dba4;
 }
@@ -141,6 +120,7 @@ hr {
   position: absolute;
   font-size: 20px;
   top: 0;
+  padding: 10px;
 }
 
 .dots{
@@ -207,9 +187,11 @@ hr {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: space-around; 
+  border: 2px solid  #565e6c;
+  border-radius: 15px;
+  margin: 2%;
 }
 .columnPic{
-  flex: 33%;
   padding: 5px;
 }
 
@@ -218,36 +200,64 @@ hr {
 }
 .sidePic{
   opacity: 0.4;
+  max-width: 100%;
 }
 .sidePic:hover, .active{
   opacity: 1;
   transition: opacity 0.5s ease;
 }
-
-
-@media only screen and (min-width : 768px) and (max-width : 1024px) {
+@media (max-width : 768px) {
   .oneImage{
-    max-width: 400px;
-    max-height: 350px;
+    max-width: 450px;
+    max-height: 400px;
+    
   }
   .flex-container{
     flex-direction: column;
   }
-  .slideshowPic{
-    height: 400px;
+  .right{
+    padding-top: 10px;
   }
 }
 
+
 /* Smartphones (portrait and landscape) ----------- */
-@media only screen and (min-width : 320px) and (max-width : 480px) {
+@media  (min-width : 320px) and (max-width : 480px) {
   .prev, .next, .text {
     font-size: 11px;
   }
   .flex-container{
     flex-direction: column;
   }
-    .slideshowPic{
-      height: 400px;
-    }
+  .oneImage{
+    max-width: 400px;
+    max-height: 350px;
 
+}
+}
+.pageNavigation{
+  flex: 1 1 45%;
+  width: auto;
+  display: block;
+  height: 100%;
+  clear: both;
+}
+.prevBlog{
+  width: 45%;
+  float: left;
+  display: block;
+}
+.nextBlog{
+  width: 45%;
+  float: right;
+  display: block;
+}
+h4{
+  color: #565e6c; 
+}
+.comments{
+  flex: 1 1 45%;
+}
+.readMoreCategory{
+  clear: both;
 }
