let's see what happens

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -81,7 +81,7 @@
           <h3>Comments</h3>
         </div>
         
-        <div class="fb-comments" data-href="http://127.0.0.1:4000/?" data-numposts="10" data-width="400px"> </div>
+        <div class="fb-comments" data-href="{{site.url}}" data-numposts="10" data-width="400px"> </div>
         
         <div id="fb-root"></div>
         </div>
