--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
          </div>
          <!-- Big Image Header -->
          <div class="imgContainer">
-             <img class="image" src="img\imageHeader2.jpg"  alt="imageHeader"/>
+             <img class="image" src="img/imageHeader2.jpg"  alt="imageHeader"/>
              <div class="imgText">
                    <h1 class="title"><span>Why I Should Have Stayed At Home</span></h1>
                    <span><button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button></span>
