still no images

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,5 @@
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us18.list-manage.com","uuid":"18a1deab68d88323607912764","lid":"dbaea1689b"}) })</script>
-<style src="js/post.js"></style>
-<div style="overflow: auto;">
+<div>
     <!-- Nav bar with social medias -->
     <div class="navBar"> 
         <a href="https://www.facebook.com/mali.princ2" target="_blank" class="socMed" >{% include icons/facebook.html %}</a>
@@ -20,7 +19,7 @@
          </div>
          <!-- Big Image Header -->
          <div class="imgContainer">
-             <img class="image" src="img/imageHeader2.jpg"  alt="imageHeader"/>
+             <img class="image" src="{{site.baseurl}}/img/imageHeader2.jpg"  alt="imageHeader"/>
              <div class="imgText">
                    <h1 class="title"><span>Why I Should Have Stayed At Home</span></h1>
                    <span><button class="subscribebutt" type="button" value="button text" onclick="subClick();">Subscribe</button></span>
