--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -83,11 +83,11 @@
      {% for post in site.posts limit 4 %}
         <div class="blogEntry">       
             <div class='blogTitle'>
-                <a href="{{ site.url }}" class="blogLink"><h4 class="tithead">{{ post.name }}</h4></a>
+                <a href="{{ post.baseurl }}" class="blogLink"><h4 class="tithead">{{ post.name }}</h4></a>
                 <h5 class='titleDesc'>{{ title_description }} <span class='light'>{{ post.url | date: "%b %-d, %Y" }}</span> </h5>
             </div>
             <div>
-                <img class="bigPostImage" src="{{site.baseurl}}{{ post.image }}" alt="{{image_name}}">
+                <img class="bigPostImage" src="{{site.baseurl}}{{ post.image }}" alt="{{post.image_name}}">
                 <div>
                     <div class="blogContainer"> 
                      {{ post.excerpt }}
