--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -92,7 +92,7 @@
                     <div class="blogContainer"> 
                      {{ post.excerpt }}
                     </div>
-                    <a href="{{post.url}}"  class="readMore">Read more...</a>
+                    <a href="{{site.baseurl}}{{post.url}}"  class="readMore">Read more...</a>
                 </div>    
             </div>
         </div>
