--- a/_includes/middle.html
+++ b/_includes/middle.html
@@ -87,7 +87,7 @@
                 <h5 class='titleDesc'>{{ title_description }} <span class='light'>{{ post.url | date: "%b %-d, %Y" }}</span> </h5>
             </div>
             <div>
-                <img class="bigPostImage" src="{{ post.image }}" alt="{{post.image_name}}">
+                <img class="bigPostImage" src="{{ post.image }}" alt="{{image_name}}">
                 <div>
                     <div class="blogContainer"> 
                      {{ post.excerpt }}
